static/style.css
body {
    margin: auto;
    max-width: 50em;
    font-family: sans-serif;
    background-color: #cad2c5;
}

.header {
    background-color: #808f85;
    padding: 5px 10px;
    border-radius: 6px;
    border: 2px solid black;
}

a {
    text-decoration: none;
    color: #2f3e46; 
    font-weight: bold;
    transition: all 0.2s ease;
}

.header a, .comment a, .program a {
    color: #cad2c5;
}

a:hover {
    text-decoration: underline;
    color: #354f52;
}

.program {
    background-color: #808f85;
    border: 2px solid black;
    margin-top: 1em;
    margin-bottom: 1em;
    border-radius: 6px;
    padding: 0.2em 0.5em;
}

.content {
    background-color: lightgray;
    border-radius: 6px;
    margin: 0.5em;
    padding: 0.2em 0.5em;
}

.create {
    background-color: #808f85;
    border: 1px solid black;
    margin: 1em;
    border-radius: 6px;
    padding: 0.2em 0.5em;
}

.comment {
    background-color: #808f85;
    border: 1px solid black;
    margin: 1em;
    border-radius: 6px;
    padding: 0.2em 0.5em;
}

input[type="submit"] {
    background-color: #52796f;
    color: white;
    border: none;
    padding: 5px 10px;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    border-radius: 4px;
    cursor: pointer;
    font-size: 0.8em;
    transition: background-color 0.2s ease;
}

input[type="submit"]:hover {
    background-color: #354f52;
}

